text-align in code blocks. Fixes #65

--- a/app/assets/stylesheets/components/_code_blocks.scss
+++ b/app/assets/stylesheets/components/_code_blocks.scss
@@ -9,4 +9,5 @@ code {
   color: #cccccc;
   background: #2d2d2d;
   font-size: modular-scale(-1);
+  text-align: left;
 }
